--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@ You can change the google font, or add a new font.-->
     		</ul>
     	</div><!-- end NAV container-->
     </nav><!--NOTE End NAV CODE-->
-    <p>
-        Nav based on codepen here: https://codepen.io/april6804/pen/rNpdRWP
-    </p>
+
 
     <div class="wrapper">
         <!-- wrapper alows for extra space between the edge of screen and content. This can be changed in the media query -->
@@ -53,10 +51,18 @@ You can change the google font, or add a new font.-->
 
       <h2>This is an h2</h2>
 
+      <div class="two-col">
+            <!-- two-col will have two items in it that will be next to eachother -->
+          <div class="medium-size">
+              <p>Nav based on codepen here: https://codepen.io/april6804/pen/rNpdRWP </p>
+              <p>The class called "grid" has styles in the styles.css media query. It will create multiple colums when the screen is larger.
+              When the screen is small the boxes stack for easy reading on a phone. </p>
+              <p>You can add more boxes here to be in the grid, but you might want to change the number of boxes across by finding the "grid-templete-columns" and adding or removing a "1fr" </p>
+              <p>I strongly suggest you DO NOT have text all the way across the website.</p>
 
-
-
-
+          </div> <!-- END medium size-->
+          <img src="images/plant.jpg" alt="">
+      </div><!-- END two-col-->
 
 
         <div class="grid">
@@ -76,8 +82,15 @@ You can change the google font, or add a new font.-->
           </div><!-- end third box -->
 
           <!-- NOTE You can add more boxes here to be in the grid-->
-      </div><!--End CSS Grid div-->
+        </div><!--End CSS Grid div-->
 
+        <h1>Another Heading</h1>
+        <div class="two-col">
+              <!-- two-col will have two items in it that will be next to eachother -->
+            <img src="images/plant.jpg" alt="">
+
+            <img src="images/plant.jpg" alt="">
+        </div><!-- END two-col-->
 
 
 
