--- a/index.html
+++ b/index.html
@@ -18,13 +18,19 @@
 
     <link rel="icon" href="images/l.jpeg" type="image/icon type">
 
+    <!-- Icon logo above -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Merienda:wght@900&display=swap" rel="stylesheet">
+
+    <!-- The logo Font Above-->
+
 </head>
 <!-- NOTE: The code above needs to be on every HTML file or the navigation will be broken and you might loose CSS styles in general.
 You can change the google font, or add a new font.-->
 <!-- NOTE No code between head and body -->
 <body>
 
-    <h1>The Bronze Coffee Shop</h1>
+    <h1 class="logo">The Bronze Coffee Shop</h1>
 
     <!--NOTE NAV CODE - watch out! Do not change class or id names -->
     <input type="checkbox" id="xBxHack" />
