--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@ You can change the google font, or add a new font.-->
         <!-- wrapper alows for extra space between the edge of screen and content. This can be changed in the media query -->
 
 
-      <h2>This is an h2</h2>
+        <br>
 
       <div class="two-col">
             <!-- two-col will have two items in it that will be next to eachother -->
-          <div class="medium-size">
+          <div class="medium-size padding-top">
+            <h2>This is an h2</h2>
               <p>Nav based on codepen here: https://codepen.io/april6804/pen/rNpdRWP </p>
               <p>The class called "grid" has styles in the styles.css media query. It will create multiple colums when the screen is larger.
               When the screen is small the boxes stack for easy reading on a phone. </p>
