--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ You can change the google font, or add a new font.-->
 <body>
 
   <div class="header">
-    <img src="images/c.jpg" alt="Header">
+    <!-- <img src="images/c.jpg" alt="Header"> -->
 
     <h1 class="logo">The Bronze Coffee Shop</h1>
   </div>
