--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@ You can change the google font, or add a new font.-->
                 <!-- NOTE Change links below -->
     			<li><a href="index.html">Home</a></li>
     			<li><a href="about.html">About</a></li>
-    			<li><a href="#">Menu</a></li>
+    			<li><a href="menu.html">Menu</a></li>
     			<li><a href="#">Contact</a></li>
                 <!-- Some of these links above won't be developed - make sure those have a hashtag in the link address so it will keep users from visiting a broken page.-->
     		</ul>
