--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ You can change the google font, or add a new font.-->
     		</label>
     		<ul id="menu" class="menu">
                 <!-- NOTE Change links below -->
-    			<li><a href="index.html">Home</a></li>
+    			<li><a href="#">Home</a></li>
     			<li><a href="about.html">About</a></li>
-    			<li><a href="#">Menu</a></li>
+    			<li><a href="menu.html">Menu</a></li>
     			<li><a href="contact.html">Contact</a></li>
                 <!-- Some of these links above won't be developed - make sure those have a hashtag in the link address so it will keep users from visiting a broken page.-->
     		</ul>
