--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@ You can change the google font, or add a new font.-->
 
   <div class="header">
     <!-- <img src="images/c.jpg" alt="Header"> -->
-
+    <br id="top">
     <h1 class="logo">The Bronze Coffee Shop</h1>
   </div>
     <!--NOTE NAV CODE - watch out! Do not change class or id names -->
@@ -139,7 +139,7 @@ You can change the google font, or add a new font.-->
 
 
       <footer>
-
+        <a href="#top"><img src="images/jumplink.png" alt="jumplink" class="jump"></a>
         <p>The Bronze Coffee Shop &copy 2022 </p>
 
       </footer>
