--- a/thankyou.html
+++ b/thankyou.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <link href="styles.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta http-equiv="refresh" content="5; url='index.html'" />
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -65,17 +68,12 @@ You can change the google font, or add a new font.-->
       <div class="two-col">
             <!-- two-col will have two items in it that will be next to eachother -->
           <div class="medium-size padding-top">
-            <h2>Contact Us</h2>
-              <p>You can call us by dialing the number:</p>
-              <p>(502)378 5022</p>
-              <p>Or contact us by email to:</p>
-              <a href="mailto:contact@bronzecoffeeshop.com?subject=feedback" class="email">contact@bronzecoffeeshop.com</a>
-              <p>We are located at: <br>231 S 5th St, Louisville, KY 40202</p>
-              <p>If you click on the map you can directly go to the google map.</p>
-          </div> <!-- END medium size-->
-          <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d100299.13528712263!2d-85.84647148359375!3d38.22503190000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e0!4m0!4m5!1s0x88690cc70adb1aa7%3A0x494e739c86830f60!2sSunergos%20Coffee%2C%201647%20Norris%20Pl%2C%20Louisville%2C%20KY%2040205!3m2!1d38.2250319!2d-85.7063958!5e0!3m2!1sen!2sus!4v1670192689245!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="iframe"></iframe>
+            <h2></h2>
 
-          <!-- The code above is the LOCATION of the coffee shop -->
+          </div> <!-- END medium size-->
+
+
+
 
 
       </div><!-- END two-col-->
@@ -85,24 +83,10 @@ You can change the google font, or add a new font.-->
             <!-- NOTE: The class called "grid" has styles in the styles.css media query. It will create multiple colums when the screen is larger.
             When the screen is small the boxes stack for easy reading on a phone. -->
             <div>
-              <h3>You can also use the form below to contact us</h3>
 
-              <form class="" action="thankyou.html" method="post">
-
-
-              <label for="fname" class="fnamet">Full Name: </label><br>
-              <input type="text" class="fname" name="fname"><br><br>
-              <label for="email" class="emailt">Email: </label><br>
-              <input type="text" class="emailb" name="emailb"><br><br>
-              <label for="subject" class="subjectt">Subject: </label><br>
-              <input type="text" class="subject" name="subject"><br><br>
-              <label for="title" class="titlet">Title: </label><br>
-              <input type="text" class="title" name="title"><br><br>
-              <button type="submit" name="submit" class="button">Submit</button>
-              </form>
           </div><!-- end first box -->
             <div>
-              <h3></h3>
+              <h3 class="tnx">Thank you!</h3>
 
 
 
@@ -110,11 +94,6 @@ You can change the google font, or add a new font.-->
 
           </div> <!-- end second box -->
             <div>
-              <p class="appreciate">We are really appreciate your feedback so please let us know what you think about our service. Your feedback will improve our service. </p>
-              <img src="images/icecream.jpg" alt="icecream" class="img9">
-
-              <!-- The image above is from: "https://en.wikipedia.org/wiki/Ice_cream#/media/File:Ice_cream_with_whipped_cream,_chocolate_syrup,_and_a_wafer_(cropped).jpg" -->
-
 
           </div><!-- end third box -->
 
