--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@ You can change the google font, or add a new font.-->
             <div>
               <h3>You can also use the form below to contact us</h3>
 
-              <form class="" action="thankyou.html" method="post">
+              <form class="" action="thankyou.html">
 
 
               <label for="fname" class="fnamet">Full Name: </label><br>
