--- a/thankyou.html
+++ b/thankyou.html
@@ -6,7 +6,7 @@
     <link href="styles.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- <meta http-equiv="refresh" content="5; url='index.html'" /> -->
+    <meta http-equiv="refresh" content="5; url='index.html'" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
